centered pin, added searchbar, fixed acc links and string div alignments

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </div>
             
             <div class="links">
-                <a id = "login">Log In</a>
+                <a class = "acc" id = "login">Log In</a>
                 |
-                <a id = "signup">Sign Up</a>
+                <a class = "acc" id = "signup">Sign Up</a>
             </div>
         </div>
         
