--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width" />
 
     <link rel="stylesheet" type = "text/css" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
 
     <style>
 
@@ -134,7 +135,7 @@
             $(document).on('click', 'slider-container', function(event){
                 var x = $(document).getElementById('slider');
             });
-        </script>
+    </script>
 
 </head>
 
@@ -148,301 +149,92 @@
 -->
 
 
-<!-- Rounded.slider-container -->
-<label class="slider-container">
-    <input type="checkbox">
-    <span class="slider"></span>
-</label>
-<!-- Pull out user photo that reveals username and short description  -->
+    <!-- Rounded.slider-container -->
+    <label class="slider-container">
+        <input type="checkbox">
+        <span class="slider"></span>
+    </label>
+    <!-- Pull out user photo that reveals username and short description  -->
 
-<div id = "sidebar">
+    <div id = "sidebar">
 
-    <div id = "info">
-        <a id = "username">username</a>
-        <p id = "description">description goes here</p>
+        <div id = "info">
+            <a id = "username">username</a>
+            <p id = "description">description goes here</p>
+        </div>
+
+        <div id = "pulltab"></div>
+
     </div>
 
-    <div id = "pulltab"></div>
+    <div id = "navbar">
+        <div class = "searchbar">
+            <input type = "search" id = "searchbox" placeholder="Search">
+        </div>
 
-</div>
-
-<div id = "navbar">
-    <div class = "searchbar">
-        <input type = "search" id = "searchbox" placeholder="Search">
-    </div>
-
-    <div class="links">
-        <a class = "acc" id = "login">Log In</a>
-        |
-        <a class = "acc" id = "signup">Sign Up</a>
-    </div>
-</div>
-
-<div class = "string">
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
+        <div class="links" id = "navBarLinks">
+            <a class = "acc" id = "login">Log In</a>
+            |
+            <a class = "acc" id = "signup">Sign Up</a>
+            <div id = "clickedNavBarLinks">
             </div>
         </div>
     </div>
 
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
+    <section class = "feed" id = "feed">
+        <div class = "string">
+            <div class = "pin">
+                <div class = "groove">
+                    <div class = "metal">
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
-    <!-- POLAROID PHOTO -->
+            <!-- POLAROID PHOTO -->
 
-    <div class = "polaroid">
+            <div class = "polaroid">
 
-        <div class = "thumbnail">
+                <div class = "thumbnail">
 
-        </div>
+                </div>
 
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
             </div>
-        </div>
-    </div>
 
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
+            <div class = "pin">
+                <div class = "groove">
+                    <div class = "metal">
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
-    <!-- POLAROID PHOTO -->
+            <!-- POLAROID PHOTO -->
 
-    <div class = "polaroid">
+            <div class = "polaroid">
 
-        <div class = "thumbnail">
+                <div class = "thumbnail">
 
-        </div>
+                </div>
 
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
             </div>
-        </div>
-    </div>
 
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-</div>
-
-<!-- string -->
-
-<div class = "string">
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
+            <div class = "pin">
+                <div class = "groove">
+                    <div class = "metal">
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
-    <!-- POLAROID PHOTO -->
+            <!-- POLAROID PHOTO -->
 
-    <div class = "polaroid">
+            <div class = "polaroid">
 
-        <div class = "thumbnail">
+                <div class = "thumbnail">
 
-        </div>
+                </div>
 
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
             </div>
-        </div>
-    </div>
 
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-</div>
-
-<!-- string -->
-
-<div class = "string">
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-
-    <div class = "pin">
-        <div class = "groove">
-            <div class = "metal">
-            </div>
-        </div>
-    </div>
-
-    <!-- POLAROID PHOTO -->
-
-    <div class = "polaroid">
-
-        <div class = "thumbnail">
-
-        </div>
-
-    </div>
-</div>
-
+    </section>
 
 </body>
 
