deleted the shit

--- a/index.html
+++ b/index.html
@@ -45,65 +45,7 @@
             </div>
         </div>
 
-        <section class = "feed" id = "feed">
-
-            <!-- string -->
-
-            <div class = "string">
-                <div class = "pin">
-                    <div class = "groove">
-                        <div class = "metal">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- POLAROID PHOTO -->
-
-                <div class = "polaroid">
-
-                    <div class = "thumbnail">
-
-                    </div>
-
-                </div>
-
-                <div class = "pin">
-                    <div class = "groove">
-                        <div class = "metal">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- POLAROID PHOTO -->
-
-                <div class = "polaroid">
-
-                    <div class = "thumbnail">
-
-                    </div>
-
-                </div>
-
-                <div class = "pin">
-                    <div class = "groove">
-                        <div class = "metal">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- POLAROID PHOTO -->
-
-                <div class = "polaroid">
-
-                    <div class = "thumbnail">
-
-                    </div>
-
-                </div>
-
-
-
-        </section>
+        <section class = "feed" id = "feed"></section>
 
     </body>
     
