--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
 
             #sidebar{
                 position: fixed;
-                z-index: 10;
+                z-index: 8;
                 top: 100px;
                 left: -230px;
                 transition: all 0.5s ease-in;
@@ -68,7 +68,7 @@
                 display: inline-block;
                 border-radius: 100px;
                 position: fixed;
-                z-index: 10;
+                z-index: 8;
                 right: 25px;
                 top: 100px;
                 width: 50px;
@@ -189,60 +189,7 @@
             </div>
         </div>
 
-    <section class = "feed" id = "feed">
-        <div class = "string">
-            <div class = "pin">
-                <div class = "groove">
-                    <div class = "metal">
-                    </div>
-                </div>
-            </div>
-
-            <!-- POLAROID PHOTO -->
-
-            <div class = "polaroid">
-
-                <div class = "thumbnail">
-
-                </div>
-
-            </div>
-
-            <div class = "pin">
-                <div class = "groove">
-                    <div class = "metal">
-                    </div>
-                </div>
-            </div>
-
-            <!-- POLAROID PHOTO -->
-
-            <div class = "polaroid">
-
-                <div class = "thumbnail">
-
-                </div>
-
-            </div>
-
-            <div class = "pin">
-                <div class = "groove">
-                    <div class = "metal">
-                    </div>
-                </div>
-            </div>
-
-            <!-- POLAROID PHOTO -->
-
-            <div class = "polaroid">
-
-                <div class = "thumbnail">
-
-                </div>
-
-            </div>
-
-
+    <section class = "feed" id = "feed"></section>
 </body>
 
 </html>
