slider (switch view)

--- a/profile.html
+++ b/profile.html
@@ -178,8 +178,8 @@
 
 
     <div class = "searchbar">
-            <input type = "search" id = "searchbox" placeholder="Search">
-        </div>
+        <input type = "search" id = "searchbox" placeholder="Search">
+    </div>
         
         <div id = "navbar">
 
@@ -198,6 +198,7 @@
     <div id="a1">Public Photos</div>
 
     <section class = "feed" id = "feed"></section>
+    <section class = "sharedFeed" id = "sharedFeed"></section>
 </body>
 
 </html>
