--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,8 @@
                 border-style: solid;
                 width: 60px;
                 height: 60px;
-                background-color: darkslategrey;
+                background-color: white;
+                background-image: url('media/user.png');
                 margin: 10px;
                 top: 20px;
                 box-shadow: 2px 2px 15px rgba(57, 57, 57, 0.53);
