--- a/profile.html
+++ b/profile.html
@@ -36,8 +36,9 @@
                 border-style: solid;
                 width: 60px;
                 height: 60px;
-                background-color: white;
+/*                background-color: white;*/
                 background-image: url('media/user.png');
+                background-size: cover;
                 margin: 10px;
                 top: 20px;
                 box-shadow: 2px 2px 15px rgba(57, 57, 57, 0.53);
