changed photos you dont own to have public tag

--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,7 @@
             </div>
         </div>
     
-    <div id="a1">Public Photos</div>
+    <div id="a1">Your Photos</div>
 
     <section class = "feed" id = "feed"></section>
     <section class = "sharedFeed" id = "sharedFeed"></section>
