hardcoded privacy lol

--- a/profile.html
+++ b/profile.html
@@ -165,8 +165,8 @@
     <div id = "sidebar">
 
         <div id = "info">
-            <a id = "username">username</a>
-            <p id = "description">description goes here</p>
+            <a id = "username" href="/profile.html#Moriah.Stanton">Moriah.Stanton</a>
+            <p id = "description">These are my photos.</p>
         </div>
 
         <div id = "pulltab"></div>
