--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
         <script src="jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="taggle.min.js"></script>
+        <script type="text/javascript" src="taggle.js"></script>
         <script type="text/javascript" src="script.js"></script>
 
 
